# compositor-poc

./: .gitignore  Cargo.toml
animator/: Cargo.toml
applications/dev_shell/: Cargo.toml
applications/dev_shell/src/: main.rs
applications/key_move/src/: main.rs
compositor/: Cargo.toml
compositor/src/: composite.rs  compositing_reason.rs  compositor.rs  drawable.rs  lib.rs
compositor/src/layer/: container_layer.rs  mod.rs  prelude.rs
compositor/src/layer_rasterizer/: mod.rs
compositor/src/rasterizer/: mod.rs
dev_shell/: Cargo.toml
dev_shell/src/: lib.rs  main.rs
example1/: Cargo.toml
example1/src/: main.rs
examples/dev_shell/: Cargo.toml
examples/dev_shell/src/: main.rs
examples/key_move/: Cargo.toml
layer_animator/: Cargo.toml
layer_animator/src/: lib.rs
layer_compositor/: Cargo.toml
layer_compositor/src/: composite.rs  compositing_reason.rs  compositor.rs  drawable.rs  lib.rs
layer_compositor/src/rasterizer/: mod.rs
layer_model/: Cargo.toml
layer_model/src/: layer_repository.rs  lib.rs
layer_model/src/layer/: commands.rs  common.rs  container.rs  layer_types.rs  mod.rs  rect.rs  sample.rs  simple_text.rs  traits.rs
layer_renderer/: Cargo.toml
layer_renderer/src/: lib.rs
logic/: Cargo.toml
logic/src/: layer_repository.rs  lib.rs
logic/src/layer/: common.rs  container.rs  mod.rs  traits.rs
painter/: Cargo.toml
painter/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
scene_controller/: Cargo.toml
scene_controller/src/: lib.rs  scheduler.rs
scheduler/: Cargo.toml
scheduler/src/: scheduler.rs
wgpu_renderer/: Cargo.toml
wgpu_renderer/src/: lib.rs  main.rs
wgpu_renderer/src/renderer/: mod.rs
wgpu_renderer/src/renderer/wgpu_layer/: camera.rs  camera_controller.rs  mod.rs  shader.vert.spv  texture.rs
wgpu_renderer/src/wgpu_layer/: camera.rs  camera_controller.rs  quad_renderer.rs  shader.vert  texture.rs  uniforms.rs
wgpu_surface/src/wgpu_layer/: camera.rs  mod.rs  quad_renderer.rs  texture.rs
