[package]
name = "layer_renderer"
version = "0.1.0"
authors = ["seungha.me@gmail.com <Seungha Kim>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layer_model = { path = "../layer_model" }
raqote = "0.8.0"
font-kit = "0.7"
pathfinder_geometry = "0.5"