[package]
name = "wgpu_renderer"
version = "0.1.0"
authors = ["seungha.me@gmail.com <Seungha Kim>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
raqote = "0.8.0"
raw-window-handle = "0.3.3"